k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: titanic-api
  namespace: titanic-api
  labels:
    app: titanic-api
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
      name: http
  selector:
    app: titanic-api
